--- a/wrangler.toml
+++ b/wrangler.toml
@@ -27,6 +27,9 @@ id = "REPLACE_WITH_KV_NAMESPACE_ID"
 # Make sure the cron below matches this offset.
 CACHE_RESET_TZ_OFFSET_MINUTES = "480"
 
+# Build info (CI will inject commit SHA into wrangler.ci.toml)
+BUILD_SHA = "dev"
+
 # Workers KV has per-value limits; keep <= 25MB.
 KV_CACHE_MAX_BYTES = "26214400"
 
